@@ -46,7 +46,7 @@ GLIB_REQ=2.6.0
 GMODULE_REQ=2.0.0
 GTK_REQ=2.6.0
 GNOME_REQ=2.0.0
-GNOMEUI_REQ=2.0.0
+GNOMEUI_REQ=2.4.0
 GNOMEVFS_REQ=2.0.0
 PYTHON_REQ=2.4
 EXIV2_REQ=0.14
