@@ -19,6 +19,7 @@
 
 #include <config.h>
 #include <locale.h>
+
 #include "gnome-cmd-includes.h"
 #include "gnome-cmd-main-win.h"
 #include "gnome-cmd-data.h"
@@ -26,7 +27,6 @@
 #include "owner.h"
 #include "gnome-cmd-style.h"
 #include "gnome-cmd-con.h"
-#include "gnome-cmd-smb-auth.h"
 #include "utils.h"
 #include "ls_colors.h"
 #include "imageloader.h"
@@ -111,10 +111,11 @@ int main (int argc, char *argv[])
                                   GNOME_PARAM_APP_DATADIR, DATADIR,
                                   GNOME_PARAM_NONE);
 
+    gnome_authentication_manager_init ();
+
     ls_colors_init ();
     gdk_rgb_init ();
     gnome_vfs_init ();
-    gnome_cmd_smb_auth_init ();
     conf_dir = g_build_path (G_DIR_SEPARATOR_S, g_get_home_dir(), ".gnome-commander", NULL);
     create_dir_if_needed (conf_dir);
     g_free (conf_dir);
